--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <!--favicon-->
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/ico-icon">
+    <!--fantawesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -106,37 +110,37 @@
                             <ul>
                                 <li>
                                     <div class="tecnology">
-                                        <img src="./assets/img/html.svg" alt="imagem do simbolo html" />
+                                        <i class="fa-brands fa-html5" id="html"></i>
                                     </div>
                                 </li>
 
                                 <li>
                                     <div class="tecnology">
-                                        <img src="./assets/img/css.svg" alt="imagem do simbolo css" />
+                                        <i class="fa-brands fa-css3-alt" id="css"></i>
                                     </div>
                                 </li>
 
                                 <li>
                                     <div class="tecnology">
-                                        <img src="./assets/img/js.svg" alt="imagem do simbolo javascript" />
+                                        <i class="fa-brands fa-js" id="js"></i>
                                     </div>
                                 </li>
 
                                 <li>
                                     <div class="tecnology">
-                                        <img src="./assets/img/bootstrap.svg" alt="imagem do simbolo bootstrap" />
+                                        <i class="fa-brands fa-bootstrap" id="bootstrap"></i>
                                     </div>
                                 </li>
 
                                 <li>
                                     <div class="tecnology">
-                                        <img src="./assets/img/react.svg" alt="imagem do simbolo react" />
+                                        <i class="fa-brands fa-react" id="react"></i>
                                     </div>
                                 </li>
 
                                 <li>
                                     <div class="tecnology">
-                                        <img src="./assets/img/sass.svg" alt="imagem do simbolo sass" />
+                                        <i class="fa-brands fa-sass" id="sass"></i>
                                     </div>
                                 </li>
 
@@ -148,13 +152,13 @@
 
                                 <li>
                                     <div class="tecnology">
-                                        <img src="./assets/img/git.svg" alt="imagem do simbolo git" />
+                                        <i class="fa-brands fa-git-alt" id="git"></i>
                                     </div>
                                 </li>
 
                                 <li>
                                     <div class="tecnology">
-                                        <img src="./assets/img/github.svg" alt="imagem do simbolo github" />
+                                        <i class="fa-brands fa-github" id="github"></i>
                                     </div>
                                 </li>
 
@@ -164,72 +168,112 @@
                         <div id="description-tecnology">
                             <ul>
                                 <li>
-                                    <div class="description hide">
-                                        <p>Arraste o mouse em cima de alguma tecnologia para ver sua descrição</p>
+                                    <div class="description">
+                                        <p style="text-align: center">Arraste o mouse em cima de alguma tecnologia para
+                                            ver sua descrição</p>
                                     </div>
                                 </li>
                                 <li class="hide">
                                     <div class="description">
                                         <h3>html</h3>
-                                        <p>description</p>
+                                        <p>
+                                            No meu aprendizado em HTML, mergulhei na estrutura essencial das páginas
+                                            web. Aprender as tags básicas e os elementos semânticos foi fundamental para
+                                            criar estruturas de conteúdo bem organizadas. Compreendi a importância da
+                                            acessibilidade e da semântica para garantir uma base sólida na construção de
+                                            sites.
+                                        </p>
                                     </div>
                                 </li>
                                 <li class="hide">
                                     <div class="description">
                                         <h3>css</h3>
-                                        <p>description</p>
+                                        <p>
+                                            Durante meus estudos em CSS, aprofundei-me nas propriedades de estilo para
+                                            dar vida ao conteúdo HTML. Explorar seletores, propriedades de formatação,
+                                            posicionamento de elementos e técnicas avançadas como flexbox e grid
+                                            possibilitaram a criação de layouts atrativos e responsivos em diversos
+                                            dispositivos.
+                                        </p>
                                     </div>
                                 </li>
-                                <li class="">
+                                <li class="hide">
                                     <div class="description">
                                         <h3>javascript</h3>
                                         <p>
-                                            Comecei a estudar javascript a 1 ano, desde então aprendi muitas
-                                            funcionalidades importantes a respeito da linguagem.
-                                        </p>
-                                        <p>
-                                            Aprendi todas as funcionalidades essencias da linguagem para aplicar no meu
-                                            dia a dia de trabalho, dentre todas elas, podemos citar as mais importantes,
-                                            como por exemplo: manipulação do DOM, funções de arrays, objetos, funções
-                                            assíncronas e frameworks, além disso, também procurei me familiarizar um
-                                            pouco com o typescript, e o apliquei parcialmente em um projeto pessoal.
+                                            O estudo de JavaScript foi essencial para adicionar interatividade às minhas
+                                            páginas web. Aprendi sobre variáveis, estruturas de controle, funções e
+                                            manipulação do DOM. Com isso, consegui criar efeitos dinâmicos, validar
+                                            formulários e interagir com APIs externas, ampliando a funcionalidade dos
+                                            meus projetos.
                                         </p>
                                     </div>
                                 </li>
                                 <li class="hide">
                                     <div class="description">
                                         <h3>bootstrap</h3>
-                                        <p>description</p>
+                                        <p>
+                                            Utilizei o Bootstrap para agilizar o desenvolvimento front-end. Aproveitei
+                                            seus componentes, grid system e classes predefinidas para criar layouts
+                                            responsivos de forma rápida e consistente, economizando tempo e garantindo
+                                            um design atraente.
+                                        </p>
                                     </div>
                                 </li>
                                 <li class="hide">
                                     <div class="description">
                                         <h3>react</h3>
-                                        <p>description</p>
+                                        <p>
+                                            Meu estudo em React me permitiu criar interfaces de usuário dinâmicas e
+                                            escaláveis. Compreendi conceitos como componentes, estados, props e o ciclo
+                                            de vida do React, permitindo-me construir aplicações web mais complexas e
+                                            reativas, oferecendo uma experiência de usuário mais fluida.
+                                        </p>
                                     </div>
                                 </li>
                                 <li class="hide">
                                     <div class="description">
                                         <h3>sass</h3>
-                                        <p>description</p>
+                                        <p>
+                                            Ao explorar o Sass, pude elevar minha eficiência no desenvolvimento
+                                            front-end. Utilizei variáveis, mixins, aninhamento e importações para
+                                            organizar e modularizar meu código CSS, simplificando a manutenção e
+                                            facilitando a criação de estilos consistentes e reutilizáveis.
+                                        </p>
                                     </div>
                                 </li>
                                 <li class="hide">
                                     <div class="description">
                                         <h3>php com mysql</h3>
-                                        <p>description</p>
+                                        <p>
+                                            Ao explorar PHP para o desenvolvimento web e integrá-lo ao MySQL, aprendi a
+                                            criar aplicações dinâmicas e robustas. Compreendi como o PHP processa dados,
+                                            gera conteúdo dinâmico e realiza operações no banco de dados MySQL,
+                                            permitindo o armazenamento e recuperação de informações de forma eficiente.
+                                        </p>
                                     </div>
                                 </li>
                                 <li class="hide">
                                     <div class="description">
                                         <h3>git</h3>
-                                        <p>description</p>
+                                        <p>
+                                            Adquiri habilidades essenciais em Git para controle de versionamento de
+                                            código. Aprendi a criar branches, realizar commits, merges e a gerenciar
+                                            eficientemente o fluxo de trabalho colaborativo, garantindo um histórico
+                                            preciso e seguro das alterações no código.
+                                        </p>
                                     </div>
                                 </li>
                                 <li class="hide">
                                     <div class="description">
                                         <h3>github</h3>
-                                        <p>description</p>
+                                        <p>
+                                            Ao usar o GitHub como plataforma para hospedar meus repositórios Git,
+                                            explorei a colaboração em equipe, aprendi sobre pull requests, resolução de
+                                            conflitos e contribuições em projetos de código aberto. Isso proporcionou
+                                            uma compreensão valiosa sobre boas práticas de desenvolvimento colaborativo
+                                            e a importância da comunidade no desenvolvimento de software.
+                                        </p>
                                     </div>
                                 </li>
                             </ul>
@@ -279,11 +323,6 @@
                     <li>
                         <div class="project">
                             <div class="media">
-                                <iframe width="300" height="200"
-                                    src="https://www.youtube.com/embed/9axrEz3ASHA?si=EY_DfOGDklM5fxtV"
-                                    title="YouTube video player" frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    allowfullscreen></iframe>
                             </div>
                             <div class="media-description">
                                 <strong>Calculator</strong>
@@ -348,8 +387,8 @@
             <section id="container-cv">
                 <p>segue aqui o meu currículo, disponível para download</p>
                 <div class="container-btn">
-                    <a href="https://drive.google.com/file/d/11mfQS7K2wtISQZjG9vAVPA5EI9BujGVz/view?usp=drive_link"
-                        download="currículo.pdf" target="_blank" class="btn btn-primary">
+                    <a href="https://drive.google.com/uc?export=download&id=11mfQS7K2wtISQZjG9vAVPA5EI9BujGVz" download
+                        class="btn btn-primary">
                         baixar currículo
                     </a>
                 </div>
@@ -365,28 +404,28 @@
                 <ul>
                     <li>
                         <a href="mailto:gabriel8webprogrammer@gmail.com" target="_blank" class="contact">
-                            <img src="./assets/img/msg.svg" alt="icone de envio de email">
+                            <i class="fa-solid fa-envelope" id="email-contact"></i>
                             <strong>e-mail</strong>
                             <span>gabriel8webprogrammer@gmail.com</span>
                         </a>
                     </li>
                     <li>
-                        <a href="https://web.whatsapp.com/send?phone=5561995815904" target="_blank" class="contact">
-                            <img src="./assets/img/whatsapp.svg" alt="icone do whatsapp">
+                        <a href="tel:+5561995815904" target="_blank" class="contact">
+                            <i class="fa-solid fa-phone" id="phone-contact"></i>
                             <strong>whatsapp</strong>
-                            <span>+55 (61) 998581-5904</span>
+                            <span>+55 (61) 99581-5904</span>
                         </a>
                     </li>
                     <li>
                         <a href="https://github.com/gabriel8programmer/" target="_blank" class="contact">
-                            <img src="./assets/img/github.svg" alt="icone do github">
+                            <i class="fa-brands fa-github" id="github-contact"></i>
                             <strong>github</strong>
                             <span>https://github.com/gabriel8programmer</span>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.linkedin.com/in/gabrielwebprogrammer/" target="_blank" class="contact">
-                            <img src="./assets/img/linkedin.svg" alt="icone do linkedin">
+                            <i class="fa-brands fa-linkedin" id="linkedin-contact"></i>
                             <strong>linkedin</strong>
                             <span>https://www.linkedin.com/in/gabrielwebprogrammer/</span>
                         </a>
