finish responsivity in the website and add preview imagens in all projects

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                     desenvolvimento desktop e desenvolvimento de games, mas atualmente, estou focado no estudo do
                     desenvolvimento web, especificamente no modelo full-stack.
                 </p>
+
             </article>
 
             <section class="container">
@@ -106,6 +107,7 @@
                     <h3>Tecnologias que eu utilizo</h3>
 
                     <section id="container-tecs">
+                        
                         <div id="tecnologies">
                             <ul>
                                 <li>
@@ -278,6 +280,7 @@
                                 </li>
                             </ul>
                         </div>
+
                     </section>
 
                 </section>
@@ -291,12 +294,14 @@
 
             <h2 class="title-section">projetos</h2>
 
-            <section id="container-projects">
+            <section id="container-projects" class="container">
 
                 <ul>
                     <li>
                         <div class="project">
-                            <div class="media"></div>
+                            <div class="media">
+                                <img src="./assets/img/tetris-preview.png" alt="previsualização do projeto tetris">
+                            </div>
                             <div class="media-description">
                                 <strong>jogo do Tetris</strong>
                                 <span>html. css. javascript</span>
@@ -309,7 +314,9 @@
                     </li>
                     <li>
                         <div class="project">
-                            <div class="media"></div>
+                            <div class="media">
+                                <img src="./assets/img/indecor-preview.png" alt="previsualização do projeto indecor">
+                            </div>
                             <div class="media-description">
                                 <strong>indecor</strong>
                                 <span>html. sass</span>
@@ -323,6 +330,7 @@
                     <li>
                         <div class="project">
                             <div class="media">
+                                <img src="./assets/img/calculator-preview.png" alt="previsualização do projeto calculator">
                             </div>
                             <div class="media-description">
                                 <strong>Calculator</strong>
@@ -336,7 +344,9 @@
                     </li>
                     <li>
                         <div class="project">
-                            <div class="media"></div>
+                            <div class="media">
+                                <img src="./assets/img/searcherCep-preview.png" alt="previsualização do projeto cep searcher">
+                            </div>
                             <div class="media-description">
                                 <strong>cep searcher</strong>
                                 <span>react. css</span>
@@ -349,7 +359,9 @@
                     </li>
                     <li>
                         <div class="project">
-                            <div class="media"></div>
+                            <div class="media">
+                                <img src="./assets/img/vidaFullstack-preview.png" alt="previsualização do projeto Jornada Front end">
+                            </div>
                             <div class="media-description">
                                 <strong>Jornada front end</strong>
                                 <span>html. sass</span>
@@ -362,7 +374,9 @@
                     </li>
                     <li>
                         <div class="project">
-                            <div class="media"></div>
+                            <div class="media">
+                                <img src="./assets/img/hashGame-preview.png" alt="previsualização do projeto Jogo da Velha">
+                            </div>
                             <div class="media-description">
                                 <strong>Jogo da velha</strong>
                                 <span>html. css. javascript</span>
@@ -400,7 +414,7 @@
 
             <h2 class="title-section">contatos</h2>
 
-            <div id="container-contacts">
+            <div id="container-contacts" class="container">
                 <ul>
                     <li>
                         <a href="mailto:gabriel8webprogrammer@gmail.com" target="_blank" class="contact">
@@ -412,7 +426,7 @@
                     <li>
                         <a href="tel:+5561995815904" target="_blank" class="contact">
                             <i class="fa-solid fa-phone" id="phone-contact"></i>
-                            <strong>whatsapp</strong>
+                            <strong>Telefone</strong>
                             <span>+55 (61) 99581-5904</span>
                         </a>
                     </li>
