change link of the website of a project

--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
                             <div class="media-description">
                                 <strong>indecor</strong>
                                 <span>html. sass</span>
-                                <a target="_blank" href="https://github.com/gabriel8programmer/landing-page-02/">ir para
+                                <a target="_blank" href="https://github.com/gabriel8programmer/indecor/">ir para
                                     repositório</a>
-                                <a target="_blank" href="https://gabriel8programmer.github.io/landing-page-02/">ir para
+                                <a target="_blank" href="https://gabriel8programmer.github.io/indecor/">ir para
                                     site</a>
                             </div>
                         </div>
