--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <!--about section-->
         <section id="about">
 
-            <h2 class="title-section">sobre min</h2>
+            <h2 class="title-section">sobre mim</h2>
             <article>
                 <p>
                     Meu nome é Gabriel e eu estudo programação à 4 anos, porém, ainda não havia me direcionado tanto
